--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@capacitor/core": "2.2.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/gyroscope": "^5.27.0",
+    "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "analog-controller": "^1.2.1",
     "cordova-android": "8.1.0",
     "cordova-plugin-gyroscope": "^0.1.4",
+    "cordova-plugin-screen-orientation": "^3.0.2",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -73,7 +76,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
