--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@angular/router": "~9.1.6",
     "@capacitor/core": "2.2.0",
     "@ionic-native/core": "^5.0.7",
-    "@ionic-native/gyroscope": "^5.27.0",
+    "@ionic-native/device-motion": "^5.27.0",
     "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "analog-controller": "^1.2.1",
     "cordova-android": "8.1.0",
-    "cordova-plugin-gyroscope": "^0.1.4",
+    "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.5.1",
@@ -68,7 +68,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-gyroscope": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -77,7 +76,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-device-motion": {}
     },
     "platforms": [
       "android"
